{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 117,
  "lineage": "dc239fa6-1c7a-4a7a-5c42-3bc91f0bebd2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "devops_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example_with_data_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:278247309442:instance/i-04b06b432043cc299",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b06b432043cc299",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-047cf9ff440b34b17",
            "private_dns": "ip-172-31-32-189.ec2.internal",
            "private_ip": "172.31.32.189",
            "public_dns": "ec2-50-19-151-225.compute-1.amazonaws.com",
            "public_ip": "50.19.151.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00ac23223395c7385",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f896d0265eec49e",
            "tags": {
              "Name": "Terraform EC2"
            },
            "tags_all": {
              "Name": "Terraform EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-034aa8b7496091646"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278247309442:internet-gateway/igw-06fcb1146667060b9",
            "id": "igw-06fcb1146667060b9",
            "owner_id": "278247309442",
            "tags": {
              "Name": "devops_igw"
            },
            "tags_all": {
              "Name": "devops_igw"
            },
            "vpc_id": "vpc-0fdb7478f874f2060"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278247309442:route-table/rtb-0c821d116e430ebd4",
            "id": "rtb-0c821d116e430ebd4",
            "owner_id": "278247309442",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fdb7478f874f2060"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-003ed92934ec231ad",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fcb1146667060b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-0fdb7478f874f2060"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_igw",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cb263951928ef7c",
            "route_table_id": "rtb-0c821d116e430ebd4",
            "subnet_id": "subnet-0014751a7159e4ec0"
          },
          "dependencies": [
            "aws_route_table.devops_private_rt",
            "aws_subnet.devops_private_subnet",
            "aws_vpc.devops_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b8c616288faa9ff",
            "route_table_id": "rtb-0c821d116e430ebd4",
            "subnet_id": "subnet-0da3963bf48197e91"
          },
          "dependencies": [
            "aws_route_table.devops_private_rt",
            "aws_subnet.devops_private_subnet",
            "aws_vpc.devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Security group for devops web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0caf42ddb58637172",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops_web_sg",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_web_sg"
            },
            "tags_all": {
              "Name": "devops_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb7478f874f2060"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278247309442:subnet/subnet-0014751a7159e4ec0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0014751a7159e4ec0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278247309442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_private_subnet_0"
            },
            "tags_all": {
              "Name": "devops_private_subnet_0"
            },
            "vpc_id": "vpc-0fdb7478f874f2060"
          },
          "dependencies": [
            "aws_vpc.devops_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278247309442:subnet/subnet-0da3963bf48197e91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da3963bf48197e91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278247309442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_private_subnet_1"
            },
            "tags_all": {
              "Name": "devops_private_subnet_1"
            },
            "vpc_id": "vpc-0fdb7478f874f2060"
          },
          "dependencies": [
            "aws_vpc.devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278247309442:subnet/subnet-044b0c31ca63c3f9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044b0c31ca63c3f9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278247309442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops_public_subnet_0"
            },
            "tags_all": {
              "Name": "devops_public_subnet_0"
            },
            "vpc_id": "vpc-0fdb7478f874f2060"
          },
          "dependencies": [
            "aws_vpc.devops_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278247309442:vpc/vpc-0fdb7478f874f2060",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0181f4e1a3930c152",
            "default_route_table_id": "rtb-0f2d0101985da14b9",
            "default_security_group_id": "sg-0f817bd276576b397",
            "dhcp_options_id": "dopt-0770d5e54846291fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fdb7478f874f2060",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2d0101985da14b9",
            "owner_id": "278247309442",
            "tags": {
              "Name": "devops_vpc"
            },
            "tags_all": {
              "Name": "devops_vpc"
            }
          }
        }
      ]
    }
  ]
}